--- a/jan-12/cartDetails.html
+++ b/jan-12/cartDetails.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-8">
     <meta name="viewport" content="width=device-width">
